--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/marcokreeft87/formulaone-card.git"
+    "url": "git+https://github.com/redlegoman/formulaone-card.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/marcokreeft87/formulaone-card/issues"
+    "url": "https://github.com/redlegoman/formulaone-card/issues"
   },
-  "homepage": "https://github.com/marcokreeft87/formulaone-card#readme",
+  "homepage": "https://github.com/redlegoman/formulaone-card#readme",
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
@@ -32,7 +32,7 @@
     "home-assistant-js-websocket": "^8.2.0",
     "lit": "^2.7.6",
     "typescript": "^4.9.5",
-    "webpack": "^5.81.0",
+    "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
@@ -51,5 +51,8 @@
     "ts-loader": "^9.4.2",
     "ttypescript": "^1.5.15",
     "yarn": "^1.22.19"
+  },
+  "directories": {
+    "test": "tests"
   }
 }
