--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "home-assistant-js-websocket": "^8.2.0",
     "lit": "^2.8.0",
     "typescript": "^4.9.5",
-    "webpack": "^5.88.2",
+    "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
@@ -52,5 +52,8 @@
     "ts-loader": "^9.4.4",
     "ttypescript": "^1.5.15",
     "yarn": "^1.22.19"
+  },
+  "directories": {
+    "test": "tests"
   }
 }
